--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
         </td>
       </tr>
       <tr>
-        <td colspan="12" class="navigation-bar">
-          <a class="navigation-item" href="#">ABOUT</a>
-          <a class="navigation-item" href="#">PEOPLE</a>
-          <a class="navigation-item" href="#">RESEARCH</a>
-          <a class="navigation-item" href="#">ACADEMICS</a>
-          <a class="navigation-item" href="#">ADMISSIONS</a>
-          <a class="navigation-item" href="#">COMPUTER FACILITIES</a>
-          <a class="navigation-item" href="#">CS<small><b> 5O</b></small>TH</a>
+          <td class=" navigation-bar" style="padding-left:5%"><a class="navigation-item" href="#">ABOUT</a></td>
+          <td class=" navigation-bar"><a class="navigation-item" href="#">PEOPLE</a></td>
+          <td class=" navigation-bar"><a class="navigation-item" href="#">RESEARCH</a></td>
+          <td class=" navigation-bar"><a class="navigation-item" href="#">ACADEMICS</a></td>
+          <td class=" navigation-bar"><a class="navigation-item" href="#">ADMISSIONS</a></td>
+          <td class=" navigation-bar"><a class="navigation-item" href="#">COMPUTER FACILITIES</a></td>
+          <td class=" navigation-bar"><a  class="navigation-item" href="#">CS<small><b> 5O</b></small>TH</a></td>
+          <td colspan="4" class=" navigation-bar"><a  href="#"></a></td>
+
         </td>
       </tr>
       <tr>
@@ -168,11 +169,11 @@
     <tfoot>
       <table class="tfooter">
         <tr>
-          <td colspan="2" style=" text-align:center;">
+          <td style=" text-align:center;">
             <h2 class="logo2">COMSATS</h2>
             <p class="sub-logo2">University</p>
           </td>
-          <td colspan="1" class="footer-element">
+          <td class="footer-element">
             <a class="footer-item" href="#">CUI Home</a>
             <a class="footer-item" href="#">Maps and Directions</a>
             <a class="footer-item" href="#">Search Comsats</a>
